MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/Egypt_Round_Robin_Assignment_Matrix__c.object-meta.xml
<CustomObject>
    <description>Object for Managing Associates under MODON-Egypt implementation.</description>
    <label>Egypt Round Robin Assignment Matrix</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Egypt Round Robin Assignment Matrix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Egypt Round Robin Assignment Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>