MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <label>Current Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>