MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/fields/Is_CallCenter__c.field-meta.xml
<CustomField>
    <fullName>Is_CallCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CallCenter</label>
    <type>Checkbox</type>
</CustomField>