MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/fields/Leave_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_To_Date__c</fullName>
    <description>Modon-Egypt Associate user leave tracking.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leave To Date</label>
    <type>Date</type>
</CustomField>