MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/fields/Leave_Today__c.field-meta.xml
<CustomField>
    <fullName>Leave_Today__c</fullName>
    <formula>AND(
    TODAY() &gt;= Leave_From_Date__c,
    TODAY() &lt;= Leave_To_Date__c
)</formula>
    <label>Leave Today</label>
    <type>Checkbox</type>
</CustomField>