MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/fields/User_Manager__c.field-meta.xml
<CustomField>
    <fullName>User_Manager__c</fullName>
    <description>Fetching the User&apos;s Manager for MODON-Egypt implementation.</description>
    <formula>User__r.ManagerId</formula>
    <label>User Manager</label>
    <type>Text</type>
</CustomField>