MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/validationRules/Prevent_Past_Leave_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Past_Leave_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Leave_From_Date__c &lt; TODAY(),
    Leave_To_Date__c &lt; TODAY() , 
    Leave_From_Date__c &gt; Leave_To_Date__c
)</errorConditionFormula>
    <errorMessage>Leave From Date and Leave To Date cannot be in the past.Also, Leave From Date cannot be after Leave To Date.</errorMessage>
</ValidationRule>