MODON MRE BPDEV/force-app/main/default/objects/Egypt_Round_Robin_Assignment_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Manager__c</columns>
    <columns>User_Number__c</columns>
    <columns>User__c</columns>
    <columns>Leave_Today__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>